# castword-gnome

./: .gitignore  Makefile  README.md  pyproject.toml
.claude/skills/: castword-gnome-release
.claude/skills/castword-gnome-make-run/: SKILL.md
.claude/skills/castword-gnome-release/: SKILL.md
castword/: about.py  audio.py  autostart.py  diff.py  key_scout.py  main.py  preferences.py  shortcuts.py  tones.py  window.py
castword/providers/: __init__.py  anthropic_provider.py  assemblyai_provider.py  base.py  gemini_provider.py  ollama_provider.py  openai_provider.py  stt_base.py  whisper_local_provider.py  whisper_provider.py
data/: gschemas.compiled  xyz.shapemachine.castword-gnome.desktop  xyz.shapemachine.castword-gnome.gschema.xml  xyz.shapemachine.castword-gnome.metainfo.xml  xyz.shapemachine.castword-gnome.service
docs/: features.md
packaging/appimage/: AppImageBuilder.yml
packaging/aur/: .SRCINFO  PKGBUILD  castword-gnome-bin.install
packaging/debian/: changelog  control  postinst  rules
packaging/flatpak/: castword-pip-deps.yaml  xyz.shapemachine.castword-gnome.yml
scripts/: release.sh  setup-shortcut.sh  update-flatpak-deps.sh
