[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "castword-gnome"
version = "0.1.0"
description = "GNOME overlay for LLM-powered text tone rewriting"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "openai>=1.30",
    "anthropic>=0.28",
    "google-generativeai>=0.7",
]

[project.scripts]
castword = "castword.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["castword*"]
